[metadata]
name = dsviz
version =  0.0.1
url = https://github.com/zolutal/pwn_gadget
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = A visualizer for structs from debug info
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pywebview

python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    dsviz = dsviz:main
